wdl-analysis/tests/validation/hints.errors
error: task `foo` does not have an input named `a`
   ┌─ tests/validation/hints:11:13
   │
11 │             a: hints {
   │             ^

